# vlm-pathways

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: default.yaml  internvl3_5_4b.yaml  llava_15_7b.yaml
data/: build_whatsup.py  convert_vsr.py  create_mirror_pairs.py  create_recognition_dataset.py  create_recognition_pairs.py  create_swapped_pairs.py  generate_shapes_dataset.py
experiments/: baseline.py  baseline_recognition_fc.py  baseline_recognition_pairs.py  causal_tracing.py  causal_tracing_generate.py  causal_tracing_recognition_fc.py  corrupted_tracing_generate.py  knockout.py  text_dominance.py  text_recovery.py
vlm_spatial/: __init__.py  config.py  data.py  hooks.py  model.py
